@@ -934,7 +934,7 @@ name|getResourceName
 argument_list|()
 return|;
 block|}
-comment|/**    * Gets the configuration resource name used by this core instance.    * @see getConfigResource    */
+comment|/**    * Gets the configuration resource name used by this core instance.    * @see #getConfigResource()    */
 annotation|@
 name|Deprecated
 DECL|method|getConfigFile
@@ -975,7 +975,7 @@ name|getResourceName
 argument_list|()
 return|;
 block|}
-comment|/**    * Gets the schema resource name used by this core instance.    * @see getSchemaResource    */
+comment|/**    * Gets the schema resource name used by this core instance.    * @see #getSchemaResource()     */
 annotation|@
 name|Deprecated
 DECL|method|getSchemaFile
@@ -2582,7 +2582,7 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
-comment|/**    * Returns a Request object based on the admin/pingQuery section    * of the Solr config file.    *     * @use {@link PingRequestHandler} instead     */
+comment|/**    * Returns a Request object based on the admin/pingQuery section    * of the Solr config file.    *     * @use {@link org.apache.solr.handler.PingRequestHandler} instead    */
 annotation|@
 name|Deprecated
 DECL|method|getPingQueryRequest
@@ -4207,6 +4207,65 @@ argument_list|,
 name|responseHeader
 argument_list|)
 expr_stmt|;
+name|NamedList
+name|toLog
+init|=
+name|rsp
+operator|.
+name|getToLog
+argument_list|()
+decl_stmt|;
+comment|//toLog.add("core", getName());
+name|toLog
+operator|.
+name|add
+argument_list|(
+literal|"webapp"
+argument_list|,
+name|req
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"webapp"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|toLog
+operator|.
+name|add
+argument_list|(
+literal|"path"
+argument_list|,
+name|req
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"path"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|toLog
+operator|.
+name|add
+argument_list|(
+literal|"params"
+argument_list|,
+literal|"{"
+operator|+
+name|req
+operator|.
+name|getParamString
+argument_list|()
+operator|+
+literal|"}"
+argument_list|)
+expr_stmt|;
 name|handler
 operator|.
 name|handleRequest
@@ -4220,56 +4279,92 @@ name|setResponseHeaderValues
 argument_list|(
 name|handler
 argument_list|,
-name|responseHeader
-argument_list|,
 name|req
 argument_list|,
 name|rsp
 argument_list|)
 expr_stmt|;
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|toLog
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|name
+init|=
+name|toLog
+operator|.
+name|getName
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|Object
+name|val
+init|=
+name|toLog
+operator|.
+name|getVal
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|name
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|"="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|val
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|" "
+argument_list|)
+expr_stmt|;
+block|}
 name|log
 operator|.
 name|info
 argument_list|(
 name|logid
 operator|+
-literal|""
-operator|+
-name|req
+name|sb
 operator|.
-name|getContext
+name|toString
 argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"path"
-argument_list|)
-operator|+
-literal|" "
-operator|+
-name|req
-operator|.
-name|getParamString
-argument_list|()
-operator|+
-literal|" 0 "
-operator|+
-call|(
-name|int
-call|)
-argument_list|(
-name|rsp
-operator|.
-name|getEndTime
-argument_list|()
-operator|-
-name|req
-operator|.
-name|getStartTime
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
+comment|/*log.info(logid+"" + req.getContext().get("path") + " "             + req.getParamString()+ " 0 "+        (int)(rsp.getEndTime() - req.getStartTime()));*/
 block|}
 annotation|@
 name|Deprecated
@@ -4362,12 +4457,6 @@ parameter_list|(
 name|SolrRequestHandler
 name|handler
 parameter_list|,
-name|NamedList
-argument_list|<
-name|Object
-argument_list|>
-name|responseHeader
-parameter_list|,
 name|SolrQueryRequest
 name|req
 parameter_list|,
@@ -4376,6 +4465,14 @@ name|rsp
 parameter_list|)
 block|{
 comment|// TODO should check that responseHeader has not been replaced by handler
+name|NamedList
+name|responseHeader
+init|=
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+decl_stmt|;
 specifier|final
 name|int
 name|qtime
@@ -4414,6 +4511,39 @@ literal|500
 argument_list|)
 expr_stmt|;
 name|responseHeader
+operator|.
+name|add
+argument_list|(
+literal|"QTime"
+argument_list|,
+name|qtime
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|.
+name|getToLog
+argument_list|()
+operator|.
+name|add
+argument_list|(
+literal|"status"
+argument_list|,
+name|rsp
+operator|.
+name|getException
+argument_list|()
+operator|==
+literal|null
+condition|?
+literal|0
+else|:
+literal|500
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|.
+name|getToLog
+argument_list|()
 operator|.
 name|add
 argument_list|(
