@@ -1183,6 +1183,26 @@ operator|.
 name|docList
 argument_list|)
 expr_stmt|;
+name|rsp
+operator|.
+name|getToLog
+argument_list|()
+operator|.
+name|add
+argument_list|(
+literal|"hits"
+argument_list|,
+name|rb
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|docList
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|boolean
 name|fsv
 init|=
