@@ -78,6 +78,16 @@ operator|new
 name|SimpleOrderedMap
 argument_list|()
 decl_stmt|;
+comment|/**    * Container for storing information that should be logged by Solr before returning.    */
+DECL|field|toLog
+specifier|protected
+name|NamedList
+name|toLog
+init|=
+operator|new
+name|SimpleOrderedMap
+argument_list|()
+decl_stmt|;
 DECL|field|defaultReturnFields
 specifier|protected
 name|Set
@@ -93,6 +103,24 @@ name|Exception
 name|err
 decl_stmt|;
 comment|/***    // another way of returning an error   int errCode;   String errMsg;   ***/
+DECL|method|SolrQueryResponse
+specifier|public
+name|SolrQueryResponse
+parameter_list|()
+block|{
+name|add
+argument_list|(
+literal|"responseHeader"
+argument_list|,
+operator|new
+name|SimpleOrderedMap
+argument_list|<
+name|Object
+argument_list|>
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Gets data to be returned in this response    * @see<a href="#returnable_data">Note on Returnable Data</a>    */
 DECL|method|getValues
 specifier|public
@@ -275,6 +303,70 @@ return|return
 name|this
 operator|.
 name|endtime
+return|;
+block|}
+comment|/** Repsonse header to be logged */
+DECL|method|getResponseHeader
+specifier|public
+name|NamedList
+name|getResponseHeader
+parameter_list|()
+block|{
+name|SimpleOrderedMap
+argument_list|<
+name|Object
+argument_list|>
+name|header
+init|=
+operator|(
+name|SimpleOrderedMap
+argument_list|<
+name|Object
+argument_list|>
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"responseHeader"
+argument_list|)
+decl_stmt|;
+return|return
+name|header
+return|;
+block|}
+comment|/** Add a value to be logged.    *     * @param name name of the thing to log    * @param val value of the thing to log    */
+DECL|method|addToLog
+specifier|public
+name|void
+name|addToLog
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|Object
+name|val
+parameter_list|)
+block|{
+name|toLog
+operator|.
+name|add
+argument_list|(
+name|name
+argument_list|,
+name|val
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Get loggable items.    *     * @return things to log    */
+DECL|method|getToLog
+specifier|public
+name|NamedList
+name|getToLog
+parameter_list|()
+block|{
+return|return
+name|toLog
 return|;
 block|}
 block|}
